--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -47,7 +47,6 @@ jobs:
 
   Process3:
     runs-on: ubuntu-latest
-    needs: [Process1,Process2]
 
     steps:
       - name: Checkout Repository
@@ -64,3 +63,42 @@ jobs:
           pip install -r requirements.txt
       - name: Run Process1
         run: python3 Py_scr/Process3.py
+
+  Process4:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Process1
+        run: python3 Py_scr/Process4.py
+
+  Process5:
+    runs-on: ubuntu-latest
+    needs: [ Process1,Process2,Process3,Process4 ]
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Process1
+        run: python3 Py_scr/Process5.py
