--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -113,4 +113,4 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@main
         with:
-          github_token: ${{ secrets.token-new }
+          github_token: ${{ secrets.token-new }}
