--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -106,11 +106,10 @@ jobs:
 
       - name: Commit files
         run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git commit --allow-empty -m "Auto-update of the data packages" -a
-
-      - name: Push changes
-        uses: ad-m/github-push-action@main
-        with:
-          github_token: ${{ secrets.token-new }}
+            git config --global user.email anapiyaevs0519@gmail.com"
+            git config --global user.name "sanzhik22"
+            git config --global credential.helper cache
+            git clone https://${{secrets.token-new}}@github.com/sanzhik22/Optimizing-by-paralel-gitactions
+            git add data
+            git commit -m "$(date)"
+            git push
