--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -110,6 +110,6 @@ jobs:
             git config --global user.name "sanzhik22"
             git config --global credential.helper cache
             git clone https://${{secrets.token-new}}@github.com/sanzhik22/Optimizing-by-paralel-gitactions
-            git add data
+            git add .
             git commit -m "$(date)"
             git push
