--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -104,12 +104,10 @@ jobs:
       - name: Run Process5
         run: python3 Py_scr/Process5.py
 
-      - name: Commit files
+      - name: Commit report
         run: |
-            git config --global user.email anapiyaevs0519@gmail.com"
-            git config --global user.name "sanzhik22"
-            git config --global credential.helper cache
-            git clone https://${{secrets.token-new}}@github.com/sanzhik22/Optimizing-by-paralel-gitactions
-            git add .
-            git commit -m "$(date)"
-            git push
+          git config --global user.name 'Sanzhar'
+          git config --global user.email 'sanzhik22@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.token-new }}@github.com/Optimizing-by-paralel-gitactions
+          git commit -am "Automated report"
+          git push
