--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -108,6 +108,6 @@ jobs:
         run: |
           git config --global user.name 'Sanzhar'
           git config --global user.email 'sanzhik22@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.token-new }}@github.com/Optimizing-by-paralel-gitactions
+          git remote set-url origin https://x-access-token:${{ secrets.token-new }}@github.com/sanzhik22/Optimizing-by-paralel-gitactions.git
           git commit -am "Automated report"
           git push
