--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -106,8 +106,10 @@ jobs:
 
       - name: Commit report
         run: |
-          git config --global user.name 'Sanzhar'
-          git config --global user.email 'sanzhik22@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ github.token-new }}@github.com/sanzhik22/Optimizing-by-paralel-gitactions.git
-          git commit -am "Automated report"
-          git push
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git commit --allow-empty -m "Auto-update of the data packages" -a
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.token-new }}
