--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -110,6 +110,6 @@ jobs:
           git config --local user.name "GitHub Action"
           git commit --allow-empty -m "Auto-update of the data packages" -a
       - name: Push changes
-        uses: ad-m/github-push-action@main
+        uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.token-new }}
+          repo-token: ${{ secrets.token-new }}
