--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -112,4 +112,4 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github-token: ${{ github.token-new }}
+          github_token: ${{ github.token-new }}
