--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -104,12 +104,13 @@ jobs:
       - name: Run Process5
         run: python3 Py_scr/Process5.py
 
-      - name: Commit report
+      - name: Commit files
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git commit --allow-empty -m "Auto-update of the data packages" -a
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.gh }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
