--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,6 +26,16 @@ jobs:
       - name: Run Process1
         run: python3 Py_scr/Process1.py
 
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
   Process2:
     runs-on: ubuntu-latest
 
@@ -44,6 +54,16 @@ jobs:
           pip install -r requirements.txt
       - name: Run Process1
         run: python3 Py_scr/Process2.py
+
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
 
   Process3:
@@ -65,6 +85,16 @@ jobs:
       - name: Run Process1
         run: python3 Py_scr/Process3.py
 
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
   Process4:
     runs-on: ubuntu-latest
 
@@ -83,6 +113,16 @@ jobs:
           pip install -r requirements.txt
       - name: Run Process4
         run: python3 Py_scr/Process4.py
+
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   Process5:
     runs-on: ubuntu-latest
