--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: de-vri-es/setup-git-credentials@v2
+        with:
+         credentials: ${{GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -26,20 +29,30 @@ jobs:
       - name: Run Process1
         run: python3 Py_scr/Process1.py
 
-      - name: Commit files
+      - name: set global variable
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git commit -a -m "Add changes"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          git config --global user.name 'sanzhik22'
+          git config --global user.email 'anapiyaevs0519@gmail.com@gmail.com'
+      - name: Check for modified files
+        id: git-check
+        run: echo ::set-output name=modified::$(if [ -n "$(git status --porcelain)" ]; then echo "true"; else echo "false"; fi)
+      - name: Update changes in GitHub repository
+        if: steps.git-check.outputs.modified == 'true'
+        run: |
+            git status
+            git add .
+            git commit -m "Auto fetch data and update"
+            git config pull.rebase false
+            git pull origin main
+            git push origin HEAD:main
 
   Process2:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: de-vri-es/setup-git-credentials@v2
+        with:
+         credentials: ${{GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -70,6 +83,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: de-vri-es/setup-git-credentials@v2
+        with:
+         credentials: ${{GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -99,9 +115,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: de-vri-es/setup-git-credentials@v2
+        with:
+         credentials: ${{GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -129,6 +147,9 @@ jobs:
     needs: [ Process1,Process2,Process3,Process4 ]
 
     steps:
+      - uses: de-vri-es/setup-git-credentials@v2
+        with:
+         credentials: ${{GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
 
