--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -177,6 +177,9 @@ jobs:
          credentials: ${{secrets.GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v2
